--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-torch
-torchvision
-numpy
-tqdm
-sklearn
+ipython==8.6.0
+numpy==1.19.5
+scikit_learn==1.1.3
+scipy==1.7.3
+torch==1.12.1
+torchvision==0.13.1
+tqdm==4.63.0
